--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,14 @@
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Z6VLb33wYXOcBcWtpVMjPvbU0DpUdQup"></script>
     <style>
         html,
-        body {
+        body,
+        #root {
+            margin: 0;
+            padding: 0;
+            position: relative;
             background: #f1f3f4;
+            width: 100%;
+            height: 100%;
         }
     </style>
     <!--
@@ -32,7 +38,6 @@
 
 <body style="background-color:transparent">
     <div id="root"></div>
-
     <!-- ajax Loading -->
     <div class="ajax-loading" id="ajaxLoading" style="display: none;">
         <div class="overlay"></div>
@@ -43,4 +48,4 @@
     </div>
 </body>
 
-</html>-
+</html>
